# thermal_camera_hotimage

./: README.md  partitions.csv
.cache/clangd/index/: Bilinear.c.60B6A557A7913F1A.idx  CelsiusSymbol.h.D4B5EB92B4334AB2.idx  Gauss.c.8881E0B3B8EA4D6A.idx  IDW.h.4D2A849CF0E78E07.idx  MLX90640_I2C_Driver.c.7BA50260F2FC1CA7.idx  (+56 more)
components/ThermalImaging/: CMakeLists.txt  Kconfig
components/ThermalImaging/include/: CelsiusSymbol.h  IDW.h  save.h  settings.h  simple_menu.h  siq02.h  sleep.h  thermalimaging.h  thermalimaging_simple.h  webserver.h  wheel.h
components/ThermalImaging/include/iic/: driver_MLX90640.h  iic.h
components/ThermalImaging/include/lcd/: dispcolor.h  spi_lcd.h  st7789.h
components/ThermalImaging/include/tasks/: render_task.h  sht31_task.h  wifi_task.h
components/ThermalImaging/include/tools/: SAFiter.h  tools.h
components/ThermalImaging/src/: console.c  func.c  menu.c  messagebox.c  save.c  settings.c  simple_menu.c  sleep.c
components/ThermalImaging/src/iic/: MLX90640_I2C_Driver.c  driver_MLX90640.c  driver_sht31.c  iic.c
components/ThermalImaging/src/interpolation/: palette.c
components/ThermalImaging/src/lcd/: dispcolor.c  lcd_bl.c  spi_lcd.c  st7789.c
components/ThermalImaging/src/lcd/font/: font.c
components/ThermalImaging/src/task/: adc_task.c  buttons_task.c  mlx90640_task.c  render_task_simple.c  sd_task.c  sht31_task.c  siq02_test.c  wheel_task.c  wifi_task.c
components/ThermalImaging/src/tools/: SAFiter.c  tools.c
components/ThermalImaging/src/webserver/: fileserver.c  webserver.c
main/: CMakeLists.txt  app_main.c
